# cmakewithgoogletest

./: CMakeLists.txt  CMakePresets.json  dummy.cpp  dummy.h  dummy_tests.cc  main.cpp
Documents/: README.md
